# axes

./: .dockerignore  .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  TODO.md  api-deployment.yaml  build.rs  compose.yaml  deployment-dev.yaml  deployment.yaml  rustfmt.toml  secret.example.yaml  service.yaml
.github/workflows/: ci.yml
.sqlx/: query-1c314f15a7f0041b1142e368ea867bb8ca9dee9b9a785a58b6ae027ae370634d.json  query-1f0fb179414470c72209bc08f3ac555e695c9365d7fa7dfd219d1b1157da5e02.json  query-24c39b5398efc4937e5773e172f416ecc38a62cd76fbf57891879590476f39bd.json  query-286b00e7cbda3b1eedd5e0c5dc27fece434fd13f7be583e81c1dfa929d9b7863.json  query-6b670fbb610f75b9e082516857ab55a8a30748bacf74a8dcb3874865db347d1b.json  query-a05324a914b9cfa02ae5c22b67916874797295cabc70d277fb38d270c82375a8.json  query-b1c6cd535b61d270192e3de7999be5154df3b42e8faead8257d2512441f1db76.json  query-fb121ed3fee1f62ab600890e7d58cc310f617a6bb5571984e49743c3c602fd54.json
entity/: Cargo.toml
entity/src/: lib.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
settings/: development.example.toml  development.toml  production.example.toml  production.toml
sql/: outbox-worker-replicas.sql
src/: config.rs  db.rs  error.rs  grpc.rs  handlers.rs  lib.rs  main.rs  route.rs  routes.rs  utils.rs
src/config/: mod.rs
src/entity/: bakery.rs  chef.rs  cities.rs  mod.rs  prelude.rs  todo_items.rs  weather.rs
src/error/: mod.rs
src/grpc/: greeter_impl.rs  mod.rs
src/handlers/: auth.rs  bakery.rs  mod.rs  users.rs
src/handlers/auth/: mod.rs
src/handlers/bakery/: mod.rs
src/handlers/chat/: mod.rs
src/handlers/orders/: mod.rs
src/handlers/stat/: hot.rs
src/handlers/users/: mod.rs
src/orders/: mod.rs  store.rs  worker.rs
src/routes/: mod.rs
src/tests/: bakery.rs  chat.rs  hot.rs  mod.rs  orders.rs
src/utils/: gracefully_shutdown.rs  jwt_auth.rs  mod.rs  tracing_setup.rs
src/utils/observability/: config.rs  grpc.rs  http.rs  logging.rs  metrics.rs  mod.rs  otlp.rs  trace.rs  tracing.rs
