[workspace]
members = [".", "migration"]

[package]
name = "axes"
version = "0.1.0"
edition = "2024"
authors = ["Rc <yilinw6@gmail.com>"]
license = "MIT"
description = "axum experimental scratch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# base libs
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
anyhow = "1"
thiserror = "2"
time = { version = "0.3", features = ["macros", "local-offset"] }
itertools = "0.14"

# axum libs
axum = { version = "0.8" }
axum-macros = "0.5"
axum-extra = { version = "0.10", features = ["typed-header"] }
headers = "0.4"
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
regex ={ version = "1", features = ["std"]} # sea-orm error conversion workaround
jsonwebtoken = { version = "10", features = ["rust_crypto"]}
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
once_cell = { version = "1" }
config = "0.15"

[dev-dependencies]
pretty_assertions = "1"
#mockall = "0.13"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
